2006-09-11  Thomas Moschny  <thomas.moschny@gmx.de>

	* cmd_diff_log.cc (CMD(log)): Now using the markings to avoid
	fetching rosters for uninteresting revisions. Needs some testing
	though.

2006-09-10  Thomas Moschny  <thomas.moschny@gmx.de>

	* cmd_diff_log.cc (CMD(log)): Traverse the tree in topological
	order, using heights and a priority queue.

2006-09-08  Thomas Moschny  <thomas.moschny@gmx.de>
	
	* database.cc (info): Show space usage information for the heights.
	* rev_height.cc (child_height): Overflow check.
	* database.cc (put_revision): ditto.
	* rev_height.cc, rev_height.hh: Use u32 integers instead of u64s.
	* database.cc (database), schema.sql, schema_migration.cc
	(migrate_monotone_schema), tests/schema_migration/__driver__.lua:
	Hash changed due to changed comment.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* revision.cc (toposort): Use the revision heights.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* automate.cc (rev_height): New command to query a rev's
	height. Preliminary.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (put_revision): Determine the revision's height and
	write it to the database.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (get_rev_height, put_rev_height, has_rev_height):
	New methods for storing and retrieving revision heights.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc (operator<): Fix a logic bug.
	(child_height): Fix an index bug introduced by refactoring.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc, rev_height.hh: Get rid of that ugly
	char[]. Correct a bug in operator<().
	* Makefile.am (MOST_SOURCES): Add rev_height.{cc|hh}.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc, rev_height.hh: Add a class for the revision
	height.

2006-09-04  Thomas Moschny  <thomas.moschny@gmx.de>

	* schema.sql: new table for the revision heights.
	* database.cc (database): new schema.